<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.imagepicker.facebook.MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimaryDark"
        android:text="Start Facebook Gallery"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="231dp"/>

    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"/>

</RelativeLayout>
